# SDL_Game_Engine

./: .gitignore  CMakeLists.txt  README.md
src/: Components.h  ECS.h  Game.cpp  Game.h  GameObj.cpp  GameObj.h  Map.cpp  Map.h  TextureManager.cpp  TextureManager.h  Vector2D.cpp  Vector2D.h  main.cpp
src/ECS/: Components.h  ECS.h  KeyboardController.h  SpriteComponent.h  TransfromComponent.h
